src/cli/snapshots/mise__cli__ls__tests__ls_json-2.snap
---
source: src/cli/ls.rs
expression: output
---
[
  {
    "version": "3.1.0",
    "requested_version": "3",
    "install_path": "~/data/installs/tiny/3.1.0",
    "source": {
      "type": ".tool-versions",
      "path": "~/cwd/.test-tool-versions"
    },
    "installed": true,
    "active": true
  }
]
