src/cli/snapshots/mise__cli__ls__tests__ls_json.snap
---
source: src/cli/ls.rs
expression: output
---
{
  "dummy": [
    {
      "version": "ref:master",
      "requested_version": "ref:master",
      "install_path": "~/data/installs/dummy/ref-master",
      "source": {
        "type": ".tool-versions",
        "path": "~/.test-tool-versions"
      }
    }
  ],
  "tiny": [
    {
      "version": "3.1.0",
      "requested_version": "3",
      "install_path": "~/data/installs/tiny/3.1.0",
      "source": {
        "type": ".tool-versions",
        "path": "~/cwd/.test-tool-versions"
      }
    }
  ]
}
